Elementos para exportar e importar formularios en cliente y aplizacion web

--- a/JCUP_JFLEX/Ejemplos indigo/formulario.form
+++ b/JCUP_JFLEX/Ejemplos indigo/formulario.form
@@ -14,7 +14,7 @@ new.formulario(
 		        "REQUERIDO": "SI"
             },
             {
-                "ID_COMPONENTE_2" : "$id_comp1",
+                "ID" : "$id_comp1",
                 "NOMBRE_CAMPO": "Cliente",
 		        "CLASE": "CAMPO_TEXTO",
 		        "TEXTO_VISIBLE": "Nombre de cliente: ",
